--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,8 +7,8 @@ env:
 phases:
   install:
     runtime-versions:
-      java: corretto8
-#      docker: 18
+      java: corretto11
+      docker: 18
   pre_build:
     commands:
       - echo Logging in to Amazon ECR...
